horizontal scroll fix

--- a/platform/api/source/stylesheets/custom.scss
+++ b/platform/api/source/stylesheets/custom.scss
@@ -301,6 +301,7 @@ span.p {
     margin-right: 27px;
     padding: 10px;
     padding-left: 16px;
+    padding-right: 30px;
     min-width: auto;
     overflow-x: scroll;
     border-left: 2px solid #84aec2;
